--- a/n8n/.env.example
+++ b/n8n/.env.example
@@ -32,6 +32,9 @@ N8N_BASIC_AUTH_ACTIVE=false
 N8N_HOST=n8n.localhost
 WEBHOOK_URL=http://n8n.localhost
 
+# Disable secure cookies for local HTTP development
+N8N_SECURE_COOKIE=false
+
 # -----------------------------------------------------------------------------
 # Timezone (REQUIRED - Pre-configured)
 # -----------------------------------------------------------------------------
