--- a/open-webui/.env.example
+++ b/open-webui/.env.example
@@ -45,3 +45,29 @@ WEBUI_AUTH=false
 # - Web search integration via SearXNG
 # - Optional RAG with Qdrant for document Q&A
 # - No authentication required (local network only)
+#
+# -----------------------------------------------------------------------------
+# Important: Ollama Context Window Configuration
+# -----------------------------------------------------------------------------
+# By default, Ollama models use a 2048 token context window (~1500 words)
+# This can be limiting for long conversations or document analysis
+#
+# Recommended: Increase context to 32k-128k tokens in Open WebUI settings:
+#
+# To configure in Open WebUI:
+#   1. Go to Settings → Models
+#   2. Select your model (e.g., llama3.1:8b)
+#   3. Click 'Advanced Parameters'
+#   4. Set 'Context Length' to:
+#      - 32768 (32k)  - Good for most use cases
+#      - 65536 (64k)  - Ideal for long conversations
+#      - 131072 (128k) - Maximum for llama3.1/gpt-oss
+#   5. Click 'Save'
+#
+# Or create a custom model via Ollama CLI:
+#   echo 'FROM llama3.1:8b' > /tmp/modelfile
+#   echo 'PARAMETER num_ctx 32768' >> /tmp/modelfile
+#   ollama create llama3.1-32k -f /tmp/modelfile
+#
+# Note: Higher context uses more VRAM (~1GB per 4k tokens)
+# Start with 32k and increase if needed
