--- a/scriberr/.env.example
+++ b/scriberr/.env.example
@@ -3,6 +3,14 @@
 # =============================================================================
 
 # -----------------------------------------------------------------------------
+# Authentication (OPTIONAL)
+# -----------------------------------------------------------------------------
+# You can pre-configure admin credentials if desired
+# If not set, Scriberr will prompt you to create an account on first access
+# SCRIBERR_USERNAME=admin
+# SCRIBERR_PASSWORD=your-secure-password
+
+# -----------------------------------------------------------------------------
 # Upload Limits (OPTIONAL)
 # -----------------------------------------------------------------------------
 # Maximum file size for uploads (default: 10GB)
